# The-AI-Engineering-Certification-v1.0

./: README.md
01_Dense_Vector_Retrieval/: 01_Cat_Health_Vector_RAG_LangChain_Qdrant.ipynb  README.md
02_Agentic_RAG_LangGraph_LangChain/: .gitignore  01_Cat_Health_Agentic_RAG_LangGraph_LangChain.ipynb  README.md
03_Agent_Memory_LangGraph_LangChain/: 01_Cat_Health_Agent_Memory_LangGraph_LangChain.ipynb
04_Multi_Agent_Systems/: 01_Cat_Health_Deep_Research_Multi_Agent_LangChain_LangGraph.ipynb
05_Synthetic_Data_Generation_for_RAG_Evals/: 01_Cat_Health_Synthetic_Data_Generation_Ragas_LangSmith.ipynb
06_Agentic_RAG_Evaluation/: 01_Metal_Price_Agent_Evaluation_Ragas_LangGraph.ipynb  pyproject.toml
06_Agentic_RAG_Evaluation/data/: agent_regression_suite.jsonl
07_Advanced_Retrievers/: 01_Cat_Health_Advanced_Retrieval.ipynb
08_MCP/: README.md  advanced_client.py  catshop.db
09_Agent_Servers/: .dockerignore  .env.example  .gitignore  Dockerfile.generated  README.md  docker-compose.yml  langgraph.json  pyproject.toml  setup.py
10_LLM_Servers/: .env.example  ENDPOINT_SETUP.md  README.md  endpoint_slammer.ipynb  local_vs_fireworks_comparison.ipynb  mcp.json  pyproject.toml  ragas_cost_evaluation.ipynb
11_Claude_Code/: README.md
11_Claude_Code/chat-app/: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  scratch_query.py
11_Claude_Code/chat-app/static/: index.html
12_Production_Agent_Patterns/: 01_Cat_Health_Agent_Guardrails.ipynb  02_Cat_Health_Agent_Caching.ipynb  README.md
14_multimodal_rag/: multimodal_rag.ipynb  pyproject.toml
(+25 files in other folders)
